Added title and favicon

--- a/faq.html
+++ b/faq.html
@@ -1,256 +1,196 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/faq.css" />
-    <link rel="stylesheet" href="css/root.css" />
-    <link rel="stylesheet" href="css/menu.css" />
-    <title>Document</title>
-  </head>
-  <body>
-    <header>
-      <nav>
-        <img class="open-button" src="assets/menu.svg" alt="menu-icon" />
-        <a href="index.html"
-          ><img src="assets/Black_logo 1.svg" alt="logo-icon"
-        /></a>
-        <img src="assets/cart.svg" alt="cart-icon" />
-      </nav>
-    </header>
-    <section class="sec-hamburger">
-      <div class="head-hamburger">
-        <img
-          class="close-icon"
-          src="assets/cross-white.png"
-          alt="X for closing hamburgermenu"
-        />
-      </div>
 
-      <div class="body-hamburger">
-        <div class="body-hamburger-text">
-          <a href="index.html"><h1>HOME</h1></a>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon" />
+  <link rel="stylesheet" href="css/faq.css" />
+  <link rel="stylesheet" href="css/root.css" />
+  <link rel="stylesheet" href="css/menu.css" />
+  <title>FAQ | BYÙ Studio</title>
+</head>
 
-          <h1 class="hamcat-shop">SHOP</h1>
-          <div class="pages-shop pages hidden">
-            <a href="productlist.html"><h2>KITS</h2></a>
-            <a href="productlist.html"><h2>REFILLS</h2></a>
-            <a href="productlist.html"><h2>CASTING</h2></a>
-          </div>
-          <div class="big-pages big-pages-shop hidden">
-            <div class="big-pages-header">
-              <img
-                class="big-pages-header-logo"
-                src="assets/Black_logo.png"
-                alt="BYU studio logo"
-              />
-            </div>
-            <div class="big-pages-body-flex">
-              <div class="big-pages-body">
-                <a href="productlist.html">
-                  <img
-                    class="ham-cat-image"
-                    src="assets/shop-blur.png"
-                    alt="" />
-                  <div class="big-link-flex">
-                    <h2>KITS</h2>
-                    <img
-                      class="ham-cat-arrow"
-                      src="assets/arrow-thin.png"
-                      alt="arrow"
-                    /></div
-                ></a>
-                <a href="productlist.html">
-                  <img
-                    class="ham-cat-image"
-                    src="assets/refills-blur.png"
-                    alt="ring made from blue wax" />
-                  <div class="big-link-flex">
-                    <h2>REFILLS</h2>
-                    <img
-                      class="ham-cat-arrow"
-                      src="assets/arrow-thin.png"
-                      alt="arrow"
-                    /></div
-                ></a>
-                <a href="productlist.html">
-                  <img
-                    class="ham-cat-image"
-                    src="assets/casting-blur.png"
-                    alt="hands with several unique silver rings" />
-                  <div class="big-link-flex">
-                    <h2>CASTING</h2>
-                    <img
-                      class="ham-cat-arrow"
-                      src="assets/arrow-thin.png"
-                      alt="arrow"
-                    /></div
-                ></a>
-              </div>
-            </div>
-            <div class="big-pages-footer">
-              <p>hello@byustudio.dk | +45 12 34 56 78</p>
-            </div>
-          </div>
+<body>
+  <header>
+    <nav>
+      <img class="open-button" src="assets/menu.svg" alt="menu-icon" />
+      <a href="index.html"><img src="assets/Black_logo 1.svg" alt="logo-icon" /></a>
+      <img src="assets/cart.svg" alt="cart-icon" />
+    </nav>
+  </header>
+  <section class="sec-hamburger">
+    <div class="head-hamburger">
+      <img class="close-icon" src="assets/cross-white.png" alt="X for closing hamburgermenu" />
+    </div>
 
-          <h1 class="hamcat-about">ABOUT BYÙ STUDIO</h1>
-          <div class="pages-about pages hidden">
-            <a href="about.html"><h2>ABOUT US</h2></a>
-            <a href="manifesto.html"><h2>MANIFESTO</h2></a>
-            <a href="sustainanability.html"><h2>SUSTAINABILITY</h2></a>
-            <a href="contact.html"><h2>CONTACT US</h2></a>
-          </div>
-          <div class="big-pages big-pages-about hidden">
-            <div class="big-pages-header">
-              <img
-                class="big-pages-header-logo"
-                src="assets/Black_logo.png"
-                alt=""
-              />
-            </div>
-            <div class="big-pages-body-flex">
-              <div class="big-pages-body">
-                <a href="about.html">
-                  <img
-                    class="ham-cat-image"
-                    src="assets/about-blur.png"
-                    alt="" />
-                  <div class="big-link-flex">
-                    <h2>ABOUT US</h2>
-                    <img
-                      class="ham-cat-arrow"
-                      src="assets/arrow-thin.png"
-                      alt="arrow"
-                    /></div
-                ></a>
-                <a href="manifesto.html">
-                  <img
-                    class="ham-cat-image"
-                    src="assets/manifesto-blur.png"
-                    alt="" />
-                  <div class="big-link-flex">
-                    <h2>MANIFESTO</h2>
-                    <img
-                      class="ham-cat-arrow"
-                      src="assets/arrow-thin.png"
-                      alt="arrow"
-                    /></div
-                ></a>
-                <a href="sustainanability.html">
-                  <img
-                    class="ham-cat-image"
-                    src="assets/sustainability-blur.png"
-                    alt="" />
-                  <div class="big-link-flex">
-                    <h2>SUSTAINABILITY</h2>
-                    <img
-                      class="ham-cat-arrow"
-                      src="assets/arrow-thin.png"
-                      alt="arrow"
-                    /></div
-                ></a>
-                <a href="contact.html">
-                  <img
-                    class="ham-cat-image"
-                    src="assets/contact-blur.png"
-                    alt="" />
-                  <div class="big-link-flex">
-                    <h2>CONTACT US</h2>
-                    <img
-                      class="ham-cat-arrow"
-                      src="assets/arrow-thin.png"
-                      alt="arrow"
-                    /></div
-                ></a>
-              </div>
-            </div>
-            <div class="big-pages-footer">
-              <p>hello@byustudio.dk | +45 12 34 56 78</p>
-            </div>
-          </div>
+    <div class="body-hamburger">
+      <div class="body-hamburger-text">
+        <a href="index.html">
+          <h1>HOME</h1>
+        </a>
 
-          <h1 class="hamcat-start">GET STARTED</h1>
-          <div class="pages-getstarted pages hidden">
-            <a href="faq.html"><h2>FAQ</h2></a>
-            <a href="inspiration.html"><h2>INSPIRATION</h2></a>
-            <a href="tutorial.html"><h2>TUTORIALS</h2></a>
+        <h1 class="hamcat-shop">SHOP</h1>
+        <div class="pages-shop pages hidden">
+          <a href="productlist.html">
+            <h2>KITS</h2>
+          </a>
+          <a href="productlist.html">
+            <h2>REFILLS</h2>
+          </a>
+          <a href="productlist.html">
+            <h2>CASTING</h2>
+          </a>
+        </div>
+        <div class="big-pages big-pages-shop hidden">
+          <div class="big-pages-header">
+            <img class="big-pages-header-logo" src="assets/Black_logo.png" alt="BYU studio logo" />
           </div>
-          <div class="big-pages big-pages-getstarted hidden">
-            <div class="big-pages-header">
-              <img
-                class="big-pages-header-logo"
-                src="assets/Black_logo.png"
-                alt=""
-              />
+          <div class="big-pages-body-flex">
+            <div class="big-pages-body">
+              <a href="productlist.html">
+                <img class="ham-cat-image" src="assets/shop-blur.png" alt="" />
+                <div class="big-link-flex">
+                  <h2>KITS</h2>
+                  <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
+                </div>
+              </a>
+              <a href="productlist.html">
+                <img class="ham-cat-image" src="assets/refills-blur.png" alt="ring made from blue wax" />
+                <div class="big-link-flex">
+                  <h2>REFILLS</h2>
+                  <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
+                </div>
+              </a>
+              <a href="productlist.html">
+                <img class="ham-cat-image" src="assets/casting-blur.png" alt="hands with several unique silver rings" />
+                <div class="big-link-flex">
+                  <h2>CASTING</h2>
+                  <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
+                </div>
+              </a>
             </div>
-            <div class="big-pages-body-flex">
-              <div class="big-pages-body">
-                <a href="faq.html">
-                  <img class="ham-cat-image" src="assets/faq-blur.png" alt="" />
-                  <div class="big-link-flex">
-                    <h2>FAQ</h2>
-                    <img
-                      class="ham-cat-arrow"
-                      src="assets/arrow-thin.png"
-                      alt="arrow"
-                    /></div
-                ></a>
-                <a href="inspiration.html">
-                  <img
-                    class="ham-cat-image"
-                    src="assets/inspiration-blur.png"
-                    alt="ring made from blue wax" />
-                  <div class="big-link-flex">
-                    <h2>INSPIRATION</h2>
-                    <img
-                      class="ham-cat-arrow"
-                      src="assets/arrow-thin.png"
-                      alt="arrow"
-                    /></div
-                ></a>
-                <a href="tutorial.html">
-                  <img
-                    class="ham-cat-image"
-                    src="assets/tutorials-blur.png"
-                    alt="hands with several unique silver rings" />
-                  <div class="big-link-flex">
-                    <h2>Tutorials</h2>
-                    <img
-                      class="ham-cat-arrow"
-                      src="assets/arrow-thin.png"
-                      alt="arrow"
-                    /></div
-                ></a>
-              </div>
+          </div>
+          <div class="big-pages-footer">
+            <p>hello@byustudio.dk | +45 12 34 56 78</p>
+          </div>
+        </div>
+
+        <h1 class="hamcat-about">ABOUT BYÙ STUDIO</h1>
+        <div class="pages-about pages hidden">
+          <a href="about.html">
+            <h2>ABOUT US</h2>
+          </a>
+          <a href="manifesto.html">
+            <h2>MANIFESTO</h2>
+          </a>
+          <a href="sustainanability.html">
+            <h2>SUSTAINABILITY</h2>
+          </a>
+          <a href="contact.html">
+            <h2>CONTACT US</h2>
+          </a>
+        </div>
+        <div class="big-pages big-pages-about hidden">
+          <div class="big-pages-header">
+            <img class="big-pages-header-logo" src="assets/Black_logo.png" alt="" />
+          </div>
+          <div class="big-pages-body-flex">
+            <div class="big-pages-body">
+              <a href="about.html">
+                <img class="ham-cat-image" src="assets/about-blur.png" alt="" />
+                <div class="big-link-flex">
+                  <h2>ABOUT US</h2>
+                  <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
+                </div>
+              </a>
+              <a href="manifesto.html">
+                <img class="ham-cat-image" src="assets/manifesto-blur.png" alt="" />
+                <div class="big-link-flex">
+                  <h2>MANIFESTO</h2>
+                  <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
+                </div>
+              </a>
+              <a href="sustainanability.html">
+                <img class="ham-cat-image" src="assets/sustainability-blur.png" alt="" />
+                <div class="big-link-flex">
+                  <h2>SUSTAINABILITY</h2>
+                  <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
+                </div>
+              </a>
+              <a href="contact.html">
+                <img class="ham-cat-image" src="assets/contact-blur.png" alt="" />
+                <div class="big-link-flex">
+                  <h2>CONTACT US</h2>
+                  <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
+                </div>
+              </a>
             </div>
-            <div class="big-pages-footer">
-              <p>hello@byustudio.dk | +45 12 34 56 78</p>
+          </div>
+          <div class="big-pages-footer">
+            <p>hello@byustudio.dk | +45 12 34 56 78</p>
+          </div>
+        </div>
+
+        <h1 class="hamcat-start">GET STARTED</h1>
+        <div class="pages-getstarted pages hidden">
+          <a href="faq.html">
+            <h2>FAQ</h2>
+          </a>
+          <a href="inspiration.html">
+            <h2>INSPIRATION</h2>
+          </a>
+          <a href="tutorial.html">
+            <h2>TUTORIALS</h2>
+          </a>
+        </div>
+        <div class="big-pages big-pages-getstarted hidden">
+          <div class="big-pages-header">
+            <img class="big-pages-header-logo" src="assets/Black_logo.png" alt="" />
+          </div>
+          <div class="big-pages-body-flex">
+            <div class="big-pages-body">
+              <a href="faq.html">
+                <img class="ham-cat-image" src="assets/faq-blur.png" alt="" />
+                <div class="big-link-flex">
+                  <h2>FAQ</h2>
+                  <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
+                </div>
+              </a>
+              <a href="inspiration.html">
+                <img class="ham-cat-image" src="assets/inspiration-blur.png" alt="ring made from blue wax" />
+                <div class="big-link-flex">
+                  <h2>INSPIRATION</h2>
+                  <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
+                </div>
+              </a>
+              <a href="tutorial.html">
+                <img class="ham-cat-image" src="assets/tutorials-blur.png"
+                  alt="hands with several unique silver rings" />
+                <div class="big-link-flex">
+                  <h2>Tutorials</h2>
+                  <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
+                </div>
+              </a>
             </div>
+          </div>
+          <div class="big-pages-footer">
+            <p>hello@byustudio.dk | +45 12 34 56 78</p>
           </div>
         </div>
       </div>
-      <div class="footer-hamburger someiconflex">
-        <a href="https://www.instagram.com/" target="_blank"
-          ><img
-            class="somelogo"
-            src="assets/instagram-white.png"
-            alt="Instagram logo"
-        /></a>
-        <a href="https://www.facebook.com/" target="_blank"
-          ><img
-            class="somelogo"
-            src="assets/facebook-white.png"
-            alt="Facebook logo"
-        /></a>
-        <a href="https://www.pinterest.com/" target="_blank"
-          ><img
-            class="somelogo"
-            src="assets/pinterest-white.png"
-            alt="Pinterest logo"
-        /></a>
-      </div>
-    </section>
-  </body>
-  <script src="js/hamburger.js"></script>
+    </div>
+    <div class="footer-hamburger someiconflex">
+      <a href="https://www.instagram.com/" target="_blank"><img class="somelogo" src="assets/instagram-white.png"
+          alt="Instagram logo" /></a>
+      <a href="https://www.facebook.com/" target="_blank"><img class="somelogo" src="assets/facebook-white.png"
+          alt="Facebook logo" /></a>
+      <a href="https://www.pinterest.com/" target="_blank"><img class="somelogo" src="assets/pinterest-white.png"
+          alt="Pinterest logo" /></a>
+    </div>
+  </section>
+</body>
+<script src="js/hamburger.js"></script>
+
 </html>
