--- a/productpage.html
+++ b/productpage.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="css/nav.css">
   <link rel="stylesheet" href="css/footer.css">
 
-  <title>BYU studio jewellery</title>
+  <title>BYÙ Studio jewellery</title>
 </head>
 
 <body>
