--- a/productpage.html
+++ b/productpage.html
@@ -212,7 +212,7 @@
   <!-- the end of the menu ↑ -->
   <main>
     <!-- product info ↓ -->
-    <img src="css/thick-lines-bg.svg" alt="" class="product-image">
+    <img src="assets/blank-box-stickers.webp" alt="" class="product-image">
     <div class="col-2">
       <div class="breadcrumbs flex-container">
         <a href="">
