--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
     <div id="bgMob" id="background-mobile" alt=""></div>
   </section>
   <section id="video">
-    <video src="" controls poster="assets/hero_img.jpg"></video>
-    <article>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/BNdCMMZbkdo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    <article>
       <h3>By you, for you</h2>
         <p id="videoPar">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Scelerisque adipiscing dui ullamcorper
           tortor. Vel vitae convallis ac nisi tellus facilisis. Magna et commodo, tortor ut quis lectus purus. Sed
