transfered all fetching to one doc

--- a/productpage.html
+++ b/productpage.html
@@ -371,6 +371,6 @@
 <script src="js/cart.js"></script>
 <script src="js/hamburger.js"></script>
 <script src="js/product-page-dynamics.js"></script>
-<script src="js/product-page-form-details.js"></script>
+<!-- <script src="js/product-page-form-details.js"></script> -->
 
 </html>
