finished styling desktop product page

--- a/productpage.html
+++ b/productpage.html
@@ -270,14 +270,58 @@
 
     <!--additional info ↓  -->
     <div class="additional-info">
-      <h3>Description</h3>
-      <p class="kit-description"></p>
-      <h3>Step-by-step</h3>
-      <p></p>
-      <h3>Frequently asked questions</h3>
-      <p></p>
-      <h3>Our customers made</h3>
-      <p></p>
+      <div class="description-box">
+        <div class="title-arrow">
+          <h3>Description</h3>
+          <img src="assets/arrow.svg" alt="">
+        </div>
+        <p class="kit-description hidden"></p>
+      </div>
+      <div class="step-by-step-box">
+        <div class="title-arrow">
+          <h3>Step-by-step</h3>
+          <img src="assets/arrow.svg" alt="">
+        </div>
+        <!-- slideshow with changing text ↓ -->
+        <!-- <img src="" alt="">
+        <p></p> -->
+      </div>
+      <div class="faq-box">
+        <div class="title-arrow">
+          <h3>Frequently asked questions</h3>
+          <img src="assets/arrow.svg" alt="">
+        </div>
+        <!-- <div class="faqs-section">
+          <div class="faq">
+            <h4>Delivery time</h4>
+            <p>Lorem ipsum</p>
+          </div>
+          <div class="faq">
+            <h4>Delivery time</h4>
+            <p>Lorem ipsum</p>
+          </div>
+          <div class="faq">
+            <h4>Delivery time</h4>
+            <p>Lorem ipsum</p>
+          </div>
+          <div class="faq">
+            <h4>Delivery time</h4>
+            <p>Lorem ipsum</p>
+          </div>
+        </div> -->
+      </div>
+      <div class="inpo-box">
+        <div class="title-arrow">
+          <h3>Our customers made</h3>
+          <img src="assets/arrow.svg" alt="">
+        </div>
+        <!-- <div class="inpo-pics-container">
+          <img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt="">
+        </div> -->
+      </div>
+    </div>
+    <div class="additional-image-box"><img src="assets/yellow-3-lines.svg" alt="" class="absolute-1"><img src="" alt=""
+        class="another-product-image"><img src="assets/yellow-3-lines.svg" alt="" class="absolute-2">
     </div>
   </main>
   <footer>
