--- a/productpage.html
+++ b/productpage.html
@@ -41,7 +41,11 @@
   <!-- hamburger menu start ↓ -->
   <section class="sec-hamburger">
     <div class="head-hamburger">
-      <img class="close-icon" src="assets/cross-white.png" alt="X for closing hamburgermenu" />
+      <img
+        class="close-icon"
+        src="assets/cross-white.png"
+        alt="X for closing hamburgermenu"
+      />
     </div>
 
     <div class="body-hamburger">
@@ -52,41 +56,69 @@
 
         <h1 class="hamcat-shop">SHOP</h1>
         <div class="pages-shop pages hidden">
-          <a href="productlist.html">
+          <a href="productlist.html?kits=true">
             <h2>KITS</h2>
           </a>
-          <a href="productlist.html">
+          <a href="productlist.html?refills=true">
             <h2>REFILLS</h2>
           </a>
-          <a href="productlist.html">
+          <a href="productlist.html?casting=true">
             <h2>CASTING</h2>
           </a>
         </div>
         <div class="big-pages big-pages-shop hidden">
           <div class="big-pages-header">
-            <img class="big-pages-header-logo" src="assets/Black_logo.png" alt="BYU studio logo" />
+            <img
+              class="big-pages-header-logo"
+              src="assets/Black_logo.png"
+              alt="BYU studio logo"
+            />
           </div>
           <div class="big-pages-body-flex">
             <div class="big-pages-body">
-              <a href="productlist.html">
-                <img class="ham-cat-image" src="assets/shop-blur.png" alt="" />
+              <a href="productlist.html?kits=true">
+                <img
+                  class="ham-cat-image"
+                  src="assets/shop-blur.png"
+                  alt=""
+                />
                 <div class="big-link-flex">
                   <h2>KITS</h2>
-                  <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
+                  <img
+                    class="ham-cat-arrow"
+                    src="assets/arrow-thin.png"
+                    alt="arrow"
+                  />
                 </div>
               </a>
-              <a href="productlist.html">
-                <img class="ham-cat-image" src="assets/refills-blur.png" alt="ring made from blue wax" />
+              <a href="productlist.html?refill=true">
+                <img
+                  class="ham-cat-image"
+                  src="assets/refills-blur.png"
+                  alt="ring made from blue wax"
+                />
                 <div class="big-link-flex">
                   <h2>REFILLS</h2>
-                  <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
+                  <img
+                    class="ham-cat-arrow"
+                    src="assets/arrow-thin.png"
+                    alt="arrow"
+                  />
                 </div>
               </a>
-              <a href="productlist.html">
-                <img class="ham-cat-image" src="assets/casting-blur.png" alt="hands with several unique silver rings" />
+              <a href="productlist.html?casting=true">
+                <img
+                  class="ham-cat-image"
+                  src="assets/casting-blur.png"
+                  alt="hands with several unique silver rings"
+                />
                 <div class="big-link-flex">
                   <h2>CASTING</h2>
-                  <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
+                  <img
+                    class="ham-cat-arrow"
+                    src="assets/arrow-thin.png"
+                    alt="arrow"
+                  />
                 </div>
               </a>
             </div>
@@ -113,36 +145,72 @@
         </div>
         <div class="big-pages big-pages-about hidden">
           <div class="big-pages-header">
-            <img class="big-pages-header-logo" src="assets/Black_logo.png" alt="" />
+            <img
+              class="big-pages-header-logo"
+              src="assets/Black_logo.png"
+              alt=""
+            />
           </div>
           <div class="big-pages-body-flex">
             <div class="big-pages-body">
               <a href="about.html">
-                <img class="ham-cat-image" src="assets/about-blur.png" alt="" />
+                <img
+                  class="ham-cat-image"
+                  src="assets/about-blur.png"
+                  alt=""
+                />
                 <div class="big-link-flex">
                   <h2>ABOUT US</h2>
-                  <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
+                  <img
+                    class="ham-cat-arrow"
+                    src="assets/arrow-thin.png"
+                    alt="arrow"
+                  />
                 </div>
               </a>
               <a href="manifesto.html">
-                <img class="ham-cat-image" src="assets/manifesto-blur.png" alt="" />
+                <img
+                  class="ham-cat-image"
+                  src="assets/manifesto-blur.png"
+                  alt=""
+                />
                 <div class="big-link-flex">
                   <h2>MANIFESTO</h2>
-                  <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
+                  <img
+                    class="ham-cat-arrow"
+                    src="assets/arrow-thin.png"
+                    alt="arrow"
+                  />
                 </div>
               </a>
               <a href="sustainanability.html">
-                <img class="ham-cat-image" src="assets/sustainability-blur.png" alt="" />
+                <img
+                  class="ham-cat-image"
+                  src="assets/sustainability-blur.png"
+                  alt=""
+                />
                 <div class="big-link-flex">
                   <h2>SUSTAINABILITY</h2>
-                  <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
+                  <img
+                    class="ham-cat-arrow"
+                    src="assets/arrow-thin.png"
+                    alt="arrow"
+                  />
                 </div>
               </a>
               <a href="contact.html">
-                <img class="ham-cat-image" src="assets/contact-blur.png" alt="" />
+                <img
+                  class="ham-cat-image"
+                  src="assets/contact-blur.png"
+                  alt=""
+                />
                 <div class="big-link-flex">
                   <h2>CONTACT US</h2>
-                  <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
+                  <img
+                    class="ham-cat-arrow"
+                    src="assets/arrow-thin.png"
+                    alt="arrow"
+                  />
                 </div>
               </a>
             </div>
@@ -166,7 +234,11 @@
         </div>
         <div class="big-pages big-pages-getstarted hidden">
           <div class="big-pages-header">
-            <img class="big-pages-header-logo" src="assets/Black_logo.png" alt="" />
+            <img
+              class="big-pages-header-logo"
+              src="assets/Black_logo.png"
+              alt=""
+            />
           </div>
           <div class="big-pages-body-flex">
             <div class="big-pages-body">
@@ -174,22 +246,41 @@
                 <img class="ham-cat-image" src="assets/faq-blur.png" alt="" />
                 <div class="big-link-flex">
                   <h2>FAQ</h2>
-                  <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
+                  <img
+                    class="ham-cat-arrow"
+                    src="assets/arrow-thin.png"
+                    alt="arrow"
+                  />
                 </div>
               </a>
               <a href="inspiration.html">
-                <img class="ham-cat-image" src="assets/inspiration-blur.png" alt="ring made from blue wax" />
+                <img
+                  class="ham-cat-image"
+                  src="assets/inspiration-blur.png"
+                  alt="ring made from blue wax"
+                />
                 <div class="big-link-flex">
                   <h2>INSPIRATION</h2>
-                  <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
+                  <img
+                    class="ham-cat-arrow"
+                    src="assets/arrow-thin.png"
+                    alt="arrow"
+                  />
                 </div>
               </a>
               <a href="tutorial.html">
-                <img class="ham-cat-image" src="assets/tutorials-blur.png"
-                  alt="hands with several unique silver rings" />
+                <img
+                  class="ham-cat-image"
+                  src="assets/tutorials-blur.png"
+                  alt="hands with several unique silver rings"
+                />
                 <div class="big-link-flex">
                   <h2>Tutorials</h2>
-                  <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
+                  <img
+                    class="ham-cat-arrow"
+                    src="assets/arrow-thin.png"
+                    alt="arrow"
+                  />
                 </div>
               </a>
             </div>
@@ -201,12 +292,24 @@
       </div>
     </div>
     <div class="footer-hamburger someiconflex">
-      <a href="https://www.instagram.com/" target="_blank"><img class="somelogo" src="assets/instagram-white.png"
-          alt="Instagram logo" /></a>
-      <a href="https://www.facebook.com/" target="_blank"><img class="somelogo" src="assets/facebook-white.png"
-          alt="Facebook logo" /></a>
-      <a href="https://www.pinterest.com/" target="_blank"><img class="somelogo" src="assets/pinterest-white.png"
-          alt="Pinterest logo" /></a>
+      <a href="https://www.instagram.com/" target="_blank"
+        ><img
+          class="somelogo"
+          src="assets/instagram-white.png"
+          alt="Instagram logo"
+      /></a>
+      <a href="https://www.facebook.com/" target="_blank"
+        ><img
+          class="somelogo"
+          src="assets/facebook-white.png"
+          alt="Facebook logo"
+      /></a>
+      <a href="https://www.pinterest.com/" target="_blank"
+        ><img
+          class="somelogo"
+          src="assets/pinterest-white.png"
+          alt="Pinterest logo"
+      /></a>
     </div>
   </section>
   <!-- the end of the menu ↑ -->
