--- a/tutorial.html
+++ b/tutorial.html
@@ -33,13 +33,21 @@
 
       <div class="body-hamburger">
         <div class="body-hamburger-text">
-          <a href="index.html"><h1>HOME</h1></a>
+          <a href="index.html">
+            <h1>HOME</h1>
+          </a>
 
           <h1 class="hamcat-shop">SHOP</h1>
           <div class="pages-shop pages hidden">
-            <a href="productlist.html"><h2>KITS</h2></a>
-            <a href="productlist.html"><h2>REFILLS</h2></a>
-            <a href="productlist.html"><h2>CASTING</h2></a>
+            <a href="productlist.html?kits=true">
+              <h2>KITS</h2>
+            </a>
+            <a href="productlist.html?refills=true">
+              <h2>REFILLS</h2>
+            </a>
+            <a href="productlist.html?casting=true">
+              <h2>CASTING</h2>
+            </a>
           </div>
           <div class="big-pages big-pages-shop hidden">
             <div class="big-pages-header">
@@ -51,45 +59,51 @@
             </div>
             <div class="big-pages-body-flex">
               <div class="big-pages-body">
-                <a href="productlist.html">
+                <a href="productlist.html?kits=true">
                   <img
                     class="ham-cat-image"
                     src="assets/shop-blur.png"
-                    alt="" />
+                    alt=""
+                  />
                   <div class="big-link-flex">
                     <h2>KITS</h2>
                     <img
                       class="ham-cat-arrow"
                       src="assets/arrow-thin.png"
                       alt="arrow"
-                    /></div
-                ></a>
-                <a href="productlist.html">
+                    />
+                  </div>
+                </a>
+                <a href="productlist.html?refill=true">
                   <img
                     class="ham-cat-image"
                     src="assets/refills-blur.png"
-                    alt="ring made from blue wax" />
+                    alt="ring made from blue wax"
+                  />
                   <div class="big-link-flex">
                     <h2>REFILLS</h2>
                     <img
                       class="ham-cat-arrow"
                       src="assets/arrow-thin.png"
                       alt="arrow"
-                    /></div
-                ></a>
-                <a href="productlist.html">
+                    />
+                  </div>
+                </a>
+                <a href="productlist.html?casting=true">
                   <img
                     class="ham-cat-image"
                     src="assets/casting-blur.png"
-                    alt="hands with several unique silver rings" />
+                    alt="hands with several unique silver rings"
+                  />
                   <div class="big-link-flex">
                     <h2>CASTING</h2>
                     <img
                       class="ham-cat-arrow"
                       src="assets/arrow-thin.png"
                       alt="arrow"
-                    /></div
-                ></a>
+                    />
+                  </div>
+                </a>
               </div>
             </div>
             <div class="big-pages-footer">
@@ -99,10 +113,18 @@
 
           <h1 class="hamcat-about">ABOUT BYÙ STUDIO</h1>
           <div class="pages-about pages hidden">
-            <a href="about.html"><h2>ABOUT US</h2></a>
-            <a href="manifesto.html"><h2>MANIFESTO</h2></a>
-            <a href="sustainanability.html"><h2>SUSTAINABILITY</h2></a>
-            <a href="contact.html"><h2>CONTACT US</h2></a>
+            <a href="about.html">
+              <h2>ABOUT US</h2>
+            </a>
+            <a href="manifesto.html">
+              <h2>MANIFESTO</h2>
+            </a>
+            <a href="sustainanability.html">
+              <h2>SUSTAINABILITY</h2>
+            </a>
+            <a href="contact.html">
+              <h2>CONTACT US</h2>
+            </a>
           </div>
           <div class="big-pages big-pages-about hidden">
             <div class="big-pages-header">
@@ -118,54 +140,62 @@
                   <img
                     class="ham-cat-image"
                     src="assets/about-blur.png"
-                    alt="" />
+                    alt=""
+                  />
                   <div class="big-link-flex">
                     <h2>ABOUT US</h2>
                     <img
                       class="ham-cat-arrow"
                       src="assets/arrow-thin.png"
                       alt="arrow"
-                    /></div
-                ></a>
+                    />
+                  </div>
+                </a>
                 <a href="manifesto.html">
                   <img
                     class="ham-cat-image"
                     src="assets/manifesto-blur.png"
-                    alt="" />
+                    alt=""
+                  />
                   <div class="big-link-flex">
                     <h2>MANIFESTO</h2>
                     <img
                       class="ham-cat-arrow"
                       src="assets/arrow-thin.png"
                       alt="arrow"
-                    /></div
-                ></a>
+                    />
+                  </div>
+                </a>
                 <a href="sustainanability.html">
                   <img
                     class="ham-cat-image"
                     src="assets/sustainability-blur.png"
-                    alt="" />
+                    alt=""
+                  />
                   <div class="big-link-flex">
                     <h2>SUSTAINABILITY</h2>
                     <img
                       class="ham-cat-arrow"
                       src="assets/arrow-thin.png"
                       alt="arrow"
-                    /></div
-                ></a>
+                    />
+                  </div>
+                </a>
                 <a href="contact.html">
                   <img
                     class="ham-cat-image"
                     src="assets/contact-blur.png"
-                    alt="" />
+                    alt=""
+                  />
                   <div class="big-link-flex">
                     <h2>CONTACT US</h2>
                     <img
                       class="ham-cat-arrow"
                       src="assets/arrow-thin.png"
                       alt="arrow"
-                    /></div
-                ></a>
+                    />
+                  </div>
+                </a>
               </div>
             </div>
             <div class="big-pages-footer">
@@ -175,9 +205,15 @@
 
           <h1 class="hamcat-start">GET STARTED</h1>
           <div class="pages-getstarted pages hidden">
-            <a href="faq.html"><h2>FAQ</h2></a>
-            <a href="inspiration.html"><h2>INSPIRATION</h2></a>
-            <a href="tutorial.html"><h2>TUTORIALS</h2></a>
+            <a href="faq.html">
+              <h2>FAQ</h2>
+            </a>
+            <a href="inspiration.html">
+              <h2>INSPIRATION</h2>
+            </a>
+            <a href="tutorial.html">
+              <h2>TUTORIALS</h2>
+            </a>
           </div>
           <div class="big-pages big-pages-getstarted hidden">
             <div class="big-pages-header">
@@ -197,34 +233,39 @@
                       class="ham-cat-arrow"
                       src="assets/arrow-thin.png"
                       alt="arrow"
-                    /></div
-                ></a>
+                    />
+                  </div>
+                </a>
                 <a href="inspiration.html">
                   <img
                     class="ham-cat-image"
                     src="assets/inspiration-blur.png"
-                    alt="ring made from blue wax" />
+                    alt="ring made from blue wax"
+                  />
                   <div class="big-link-flex">
                     <h2>INSPIRATION</h2>
                     <img
                       class="ham-cat-arrow"
                       src="assets/arrow-thin.png"
                       alt="arrow"
-                    /></div
-                ></a>
+                    />
+                  </div>
+                </a>
                 <a href="tutorial.html">
                   <img
                     class="ham-cat-image"
                     src="assets/tutorials-blur.png"
-                    alt="hands with several unique silver rings" />
+                    alt="hands with several unique silver rings"
+                  />
                   <div class="big-link-flex">
                     <h2>Tutorials</h2>
                     <img
                       class="ham-cat-arrow"
                       src="assets/arrow-thin.png"
                       alt="arrow"
-                    /></div
-                ></a>
+                    />
+                  </div>
+                </a>
               </div>
             </div>
             <div class="big-pages-footer">
