--- a/index.html
+++ b/index.html
@@ -35,9 +35,8 @@
   <section id="video">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/BNdCMMZbkdo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    <article>
       <h3>By you, for you</h2>
-        <p id="videoPar">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Scelerisque adipiscing dui ullamcorper
-          tortor. Vel vitae convallis ac nisi tellus facilisis. Magna et commodo, tortor ut quis lectus purus. Sed
-          tincidunt nunc nibh in suspendisse a.</p>
+        <p id="videoPar">We are selling DIY  kits containing different types of shaping wax, shaping tools, instructions and design ideas, and potentially ethical lab-grown gemstones, with which you can create your own jewelry prototypes. Also, we can cast it for you afterwards.
+        </p>
     </article>
   </section>
   <section id="steps">
@@ -46,27 +45,23 @@
       <div class="oneStep">
         <img src="assets/step-one.svg" alt="">
         <h4>Choose your kit</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pretium feugiat pretium vitae duis rhoncus </p>
       </div>
 
       <div class="oneStep">
         <img src="assets/step-two.svg" alt="">
         <h4>Choose your kit</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pretium feugiat pretium vitae duis rhoncus </p>
       </div>
 
       <div class="oneStep">
         <img src="assets/step-three.svg" alt="">
         <h4>Choose your kit</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pretium feugiat pretium vitae duis rhoncus </p>
       </div>
     </div>
   </section>
   <section id="kits">
     <div id="kitsText">
       <h2>Go explore our kits</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Scelerisque adipiscing dui ullamcorper tortor. Vel
-        vitae convallis ac nisi</p>
+      <p>In our kit selection, you can choose the type that fits you the best. Whether you want to try it on your own, with your friend or even with your whole family. We have got you covered.</p>
       <button>Tell me more</button>
     </div>
     <img id="kbiggerImg" src="assets/kits-lp-big.jpg" alt="">
@@ -78,8 +73,7 @@
     <img id="sbiggerImg" src="assets/sus-lp-big.jpg" alt="">
     <div id="sustainText">
       <h2>We care about nature</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Scelerisque adipiscing dui ullamcorper tortor. Vel
-        vitae convallis ac nisi</p>
+      <p>It is important for us to make sustainable choices, and our product isn't different from that. Material, production, shipping, all of that with the right values in our mind.</p>
       <button>Tell me more</button>
     </div>
   </section>
@@ -87,8 +81,7 @@
     <div>
       <h2>Get inspired by others</h2>
 
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Scelerisque adipiscing dui ullamcorper tortor. Vel
-        vitae convallis ac nisi</p><button>Show me more</button>
+      <p>Do you wonder what the final product can look like? Wonder no more. Here you can see some of the creations made from BYU kits. Jump to our inspiration page for even more ideas,</p><button>Show me more</button>
     </div>
     <img src="assets/pinterest.png" alt="">
 
@@ -103,8 +96,7 @@
   <footer>
 
     <img src="assets/Black_logo 1.svg" alt="logo-icon">
-    <p id="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Rhoncus viverra consectetur adipiscing
-      elit. Rhoncus viverra </p>
+    <p id="description">DIY jewelry kits for a personalized experience. Put your creativity to work, craft a lovely piece of jewelry, and shine.</p>
     <p id="contact">+45 12 34 56 78 | hello@byustudio.dk</p>
     <div id="some">
       <img src="assets/ig_logo.svg" alt=""><img src="assets/facebook_logo.svg" alt=""><img src="assets/Vector.svg"
