added links in footer

--- a/inspiration.html
+++ b/inspiration.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="css/inspiration.css" />
     <link rel="stylesheet" href="css/cart.css" />
     <link rel="stylesheet" href="css/menu.css" />
+    <link rel="stylesheet" href="css/nav.css" />
+    <link rel="stylesheet" href="css/footer.css" />
     <title>Get inspired | BYÙ Studio</title>
   </head>
 
@@ -404,7 +406,54 @@
       </div>
     </section>
     <main></main>
-    <footer></footer>
+    <footer>
+      <img src="assets/Black_logo 1.svg" alt="logo-icon" />
+      <p id="description">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Rhoncus viverra
+        consectetur adipiscing elit. Rhoncus viverra
+      </p>
+      <p id="contact">+45 12 34 56 78 | hello@byustudio.dk</p>
+      <div id="some">
+        <img src="assets/ig_logo.svg" alt="" /><img
+          src="assets/facebook_logo.svg"
+          alt=""
+        /><img src="assets/Vector.svg" alt="" />
+      </div>
+      <div id="footerNav">
+        <ul>
+          <li>
+            <h5>Shop</h5>
+          </li>
+          <li><a href="productlist.html?kits=true">Kits</a></li>
+          <li><a href="productlist.html?refill=true">Add-ons</a></li>
+          <li><a href="productlist.html?casting=true">Casting</a></li>
+        </ul>
+        <ul>
+          <li>
+            <h5>We Are</h5>
+          </li>
+          <li><a href="about.html">About BYU</a></li>
+          <li><a href="manifesto.html">Manifesto</a></li>
+          <li><a href="sustainanability.html">Sustainability</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+        <ul>
+          <li>
+            <h5>Get Started</h5>
+          </li>
+          <li><a href="inspiration.html">Inspiration</a></li>
+          <li><a href="tutorial.html">Tutorials</a></li>
+          <li><a href="faq.html">FAQ's</a></li>
+        </ul>
+      </div>
+      <div id="legal">
+        <a href="#">Privacy policy | </a>
+        <a href="faq.html">FAQ's | </a>
+        <a href="#">Customer service | </a>
+        <a href="#">Shipping | </a>
+        <a href="#">Terms and conditions</a>
+      </div>
+    </footer>
   </body>
   <script src="js/cart.js"></script>
   <script src="js/hamburger.js"></script>
