--- a/productlist.html
+++ b/productlist.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="css/productlist.css" />
     <link rel="stylesheet" href="css/root.css" />
     <link rel="stylesheet" href="css/menu.css" />
+    <link rel="stylesheet" href="css/nav.css" />
+    <link rel="stylesheet" href="css/footer.css" />
     <title>Document</title>
   </head>
 
@@ -400,34 +402,34 @@
         <li>
           <h5>Shop</h5>
         </li>
-        <li><a href="">Kits</a></li>
-        <li><a href="">Add-ons</a></li>
-        <li><a href="">Casting</a></li>
+        <li><a href="productlist.html?kits=true">Kits</a></li>
+        <li><a href="productlist.html?refill=true">Add-ons</a></li>
+        <li><a href="productlist.html?casting=true">Casting</a></li>
       </ul>
       <ul>
         <li>
           <h5>We Are</h5>
         </li>
-        <li><a href="">About BYU</a></li>
-        <li><a href="">Manifestop</a></li>
-        <li><a href="">Sustainability</a></li>
-        <li><a href="">Contact</a></li>
+        <li><a href="about.html">About BYU</a></li>
+        <li><a href="manifesto.html">Manifesto</a></li>
+        <li><a href="sustainanability.html">Sustainability</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
       <ul>
         <li>
           <h5>Get Started</h5>
         </li>
-        <li><a href="">Inspiration</a></li>
-        <li><a href="">Tutorials</a></li>
-        <li><a href="">FAQ's</a></li>
+        <li><a href="inspiration.html">Inspiration</a></li>
+        <li><a href="tutorial.html">Tutorials</a></li>
+        <li><a href="faq.html">FAQ's</a></li>
       </ul>
     </div>
     <div id="legal">
-      <a href="">Privacy policy | </a>
-      <a href="">FAQ's | </a>
-      <a href="">Customer service | </a>
-      <a href="">Shipping | </a>
-      <a href="">Terms and conditions</a>
+      <a href="#">Privacy policy | </a>
+      <a href="faq.html">FAQ's | </a>
+      <a href="#">Customer service | </a>
+      <a href="#">Shipping | </a>
+      <a href="#">Terms and conditions</a>
     </div>
   </footer>
   <script src="js/hamburger.js"></script>
