changed from refill to refills

--- a/productpage.html
+++ b/productpage.html
@@ -91,7 +91,7 @@
                   />
                 </div>
               </a>
-              <a href="productlist.html?refill=true">
+              <a href="productlist.html?refills=true">
                 <img
                   class="ham-cat-image"
                   src="assets/refills-blur.png"
@@ -446,7 +446,7 @@
           <h5>Shop</h5>
         </li>
         <li><a href="productlist.html?kits=true">Kits</a></li>
-        <li><a href="productlist.html?refill=true">Add-ons</a></li>
+        <li><a href="productlist.html?refills=true">Add-ons</a></li>
         <li><a href="productlist.html?casting=true">Casting</a></li>
       </ul>
       <ul>
