--- a/checkout-reciept.html
+++ b/checkout-reciept.html
@@ -74,7 +74,7 @@
                     />
                   </div>
                 </a>
-                <a href="productlist.html?refill=true">
+                <a href="productlist.html?refills=true">
                   <img
                     class="ham-cat-image"
                     src="assets/refills-blur.png"
