added steps text

--- a/index.html
+++ b/index.html
@@ -45,16 +45,17 @@
       <div class="oneStep">
         <img src="assets/step-one.svg" alt="">
         <h4>Choose your kit</h4>
+        <p>Standard kit for one person, Kit for two and Family kit for a group of people. Choose the one that fits you the best. </p>
       </div>
-
       <div class="oneStep">
         <img src="assets/step-two.svg" alt="">
         <h4>Choose your kit</h4>
+        <p>Watch the tutorials here on the website or go complete freestyle. It's completely upon you. </p>
       </div>
-
       <div class="oneStep">
         <img src="assets/step-three.svg" alt="">
         <h4>Choose your kit</h4>
+        <p>Are you done with your masterpiece? Let's transform it into real jewelry. Silver or Gold, you choose.</p>
       </div>
     </div>
   </section>
