--- a/contact.html
+++ b/contact.html
@@ -309,11 +309,13 @@
             placeholder="Subject"
             />
 
-            <input 
-            type="text"
+            <textarea
             name="message"
-            id= "message"
-            />
+            required
+            id="message"
+            rows="8"
+            columns="8"
+            ></textarea>
             
 
       </section>
